@@ -16,13 +16,13 @@ Vue.component('lms-sync-dialog', {
      <v-flex xs12 class="dlgtitle">{{i18n("Select which players you would like to synchronise with '%1'", player.name)}}</v-flex>
      <v-flex xs12>
       <v-list class="sleep-list dialog-main-list">
-       <v-list-tile @click="" @mousedown="toggleAllA($event)" @mouseup="toggleAllB($event)" @touchstart="toggleAllA($event)" @touchend="toggleAllB($event)" v-if="players.length>1">
+       <v-list-tile @click="toggleAll" @mousedown="toggleAllDown" @touchstart="toggleAllDown" v-if="players.length>1">
         <v-list-tile-avatar :tile="true" class="lms-avatar"><v-icon>{{selectAllIcon}}</v-icon></v-list-tile-avatar>
         <v-list-tile-title class="sleep-item">{{i18n('Select All')}}</v-list-tile-title>
        </v-list-tile>
        <v-divider v-if="players.length>1"></v-divider>
        <template v-for="(p, index) in players">
-        <v-list-tile @click="" @mousedown="togglePlayerA($event, index)" @mouseup="togglePlayerB($event, index)" @touchstart="togglePlayerA($event, index)" @touchend="togglePlayerB($event, index)">
+        <v-list-tile @click="togglePlayer(index)" @mousedown="togglePlayerDown(index)" @touchstart="togglePlayerDown(index)">
          <v-list-tile-avatar :tile="true" class="lms-avatar"><v-icon>{{p.synced ? 'check_box' : 'check_box_outline_blank'}}</v-icon></v-list-tile-avatar>
          <v-list-tile-title class="sleep-item">{{p.name}}</v-list-tile-title>
         </v-list-tile>
@@ -75,7 +75,7 @@ Vue.component('lms-sync-dialog', {
             }
             this.player = player;
             this.numSync = 0;
-            this.lastBtn = undefined;
+            this.lastIndex = undefined;
             lmsCommand(this.player.id, ["sync", "?"]).then(({data}) => {
                 if (data && data.result && undefined!=data.result._sync) {
                     let sync = data.result._sync.split(",");
@@ -157,18 +157,15 @@ Vue.component('lms-sync-dialog', {
                 });
             }
         },
-        togglePlayerA(ev, index) {
-            ev.preventDefault();
-            this.lastBtn = index;
-        },
-        togglePlayerB(ev, index) {
-            ev.preventDefault();
-            if (index!=undefined && this.lastBtn==index) {
-                this.togglePlayer(index);
-            }
-            this.lastBtn = undefined;
+        togglePlayerDown(index) {
+            this.lastIndex = index;
         },
         togglePlayer(index) {
+            if (this.lastIndex!=index) {
+                this.lastIndex = undefined;
+                return;
+            }
+            this.lastIndex = undefined;
             if (index<0 || index>this.players.length) {
                 return;
             }
@@ -176,18 +173,15 @@ Vue.component('lms-sync-dialog', {
             player.synced=!player.synced;
             this.numSync+=(player.synced ? 1 : -1);
         },
-        toggleAllA(ev) {
-            ev.preventDefault();
-            this.lastBtn=-1;
-        },
-        toggleAllB(ev) {
-            ev.preventDefault();
-            if (this.lastBtn==-1) {
-                this.toggleAll();
-            }
-            this.lastBtn = undefined;
+        toggleAllDown() {
+            this.lastIndex=-1;
         },
         toggleAll() {
+            if (this.lastIndex!=-1) {
+                this.lastIndex = undefined;
+                return;
+            }
+            this.lastIndex = undefined;
             let sel = this.numSync!=this.players.length;
             for (let i=0, len=this.players.length; i<len; ++i) {
                 this.players[i].synced = sel;
