@@ -6,6 +6,7 @@
 3. Fix URL parsing - thanks to Michael Herger.
 4. Don't add custom select wrapping to multi-selects.
 5. Fix sorting of albums list if it contains a Works section.
+6. Fix sync and sleep dialogs not being scrollable on touch devices.
 
 5.7.0
 -----
